[package]
name = "rport-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rport-common = { path = "../rport-common" }
async-stream = "0.3"
turn = "0.11.0"
webrtc-util = "0.12.0"
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
rand = "0.9.2"
get_if_addrs = "0.5.3"
