[package]
name = "rport-server"
version = "0.1.2"
edition = "2021"
description = "P2P Signaling server for rport"
license = "MIT"
repository = "https://github.com/restsend/rport"
authors = ["jinti<shenjindi@fourz.cn"]

[dependencies]
turn = "0.11.0"
webrtc-util = "0.12.0"
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
rand = "0.9.2"
get_if_addrs = "0.5.3"
axum = "0.8.7"
anyhow = "1.0.100"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
async-stream = "0.3.6"
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
clap = { version = "4.5.53", features = ["derive"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
