[package]
name = "rport"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
rustrtc = { workspace = true }
rport-common = { path = "../rport-common" }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
tokio-tungstenite = "0.21"
bytes = { workspace = true }
tokio-util = { version = "0.7.16", features = ["codec"] }
toml = "0.9.5"
home = "0.5"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
