[package]
name = "rport"
version = "0.1.6"
edition = "2021"
description = "A p2p port forwarding client using WebRTC datachannels"
license = "MIT"
repository = "https://github.com/restsend/rport"
authors = ["jinti<shenjindi@fourz.cn"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
tokio-tungstenite = "0.28.0"
tokio-util = { version = "0.7.16", features = ["codec"] }
toml = "0.9.5"
home = "0.5"
bytes = "1.11.0"
futures = "0.3"
rustrtc = "0.2.17"
#rustrtc = { path = "../../rustrtc" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4.5.53", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
